<resources>
    <string name="app_name">EasyBilling</string>
    <string name="welcome">Welcome</string>
    <string name="to_your">To Your</string>
    <string name="shop_s">Shop\'s</string>
    <string name="billing">Billing</string>
    <string name="hub">Hub</string>
    <string name="mobile">Mobile</string>
    <string name="easy_billing">Easy Billing</string>
    <string name="accessoris">Accessoris</string>
    <string name="bill_number">BILL NUMBER</string>
    <string name="customer_name">CUSTOMER NAME</string>
    <string name="customer_aadharcard_number">CUSTOMER AADHARCARD NUMBER</string>
    <string name="customer_phone_number">CUSTOMER PHONE NUMBER</string>
    <string name="customer_address">CUSTOMER ADDRESS</string>
    <string name="brand">BRAND</string>
    <string name="model_number">MODEL NUMBER</string>
    <string name="imei_number">IMEI NUMBER 1</string>
    <string name="imei_number_2">IMEI NUMBER 2</string>
    <string name="quantity">QUANTITY</string>
    <string name="price">PRICE</string>
    <string name="due">DUE</string>
    <string name="discount">DISCOUNT</string>
    <string name="warranty_date">WARRANTY DATE</string>
    <string name="date">DATE</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="form_page">CUSTOMER DETAILS</string>
    <string name="sign_up">Sign UP</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="already_have_an_account">Already Have An Account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_with_apple">Sign Up with Apple</string>
    <string name="share_flawless">Share Flawless</string>
    <string name="invoices">Invoices</string>
    <string name="approve_sign_and_keep">Approve Sign And Keep</string>
    <string name="tabs_on_every_invoice">Tabs On Every Invoice</string>
    <string name="that_s_sent_to">That’s Sent To</string>
    <string name="customers">Customers</string>
    <string name="my_account">My Account</string>
    <string name="log_out">Log Out</string>
    <string name="sales_data">Sales Data</string>
    <string name="customer_details">Customer Details</string>
</resources>