<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignInActivity">



    <LinearLayout
        android:id="@+id/homePageText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:paddingTop="@dimen/_40sdp"
        android:orientation="vertical"
        android:background="@drawable/signupbg"
        android:paddingStart="@dimen/_40sdp"
        android:paddingEnd="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/homePageFont"
            android:textSize="@dimen/_40ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_your"
            android:textSize="@dimen/_30ssp"
            android:textColor="@color/homeScreenText"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_s"
                android:textColor="@color/homeScreenText"
                android:textSize="@dimen/_30ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/billing"
                android:textSize="@dimen/_40ssp"
                android:textColor="@color/homePageFont"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hub"
            android:textColor="@color/homeScreenText"
            android:textSize="@dimen/_30ssp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/signUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="#1431FA"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePageText" />

    <TextView
        android:id="@+id/signUpWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_30sdp"
        android:layout_marginTop="36dp"
        android:background="@drawable/homepage_button_bg"
        android:drawableStart="@drawable/google_icon"
        android:gravity="center"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:text="@string/sign_up_with_google"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpText" />


    <TextView
        android:id="@+id/signUpWithApple"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_30sdp"
        android:layout_marginTop="36dp"
        android:background="@drawable/homepage_button_bg"
        android:drawableStart="@drawable/apple_icon"
        android:gravity="center"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:text="@string/sign_up_with_apple"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpWithGoogle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpWithApple">


        <TextView
            android:id="@+id/alreadyHave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#1431FA"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/alreadyHave"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>