<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/formPageColor"
    tools:context=".FormActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bill_number"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/bill_number"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg"
                android:autofillHints="@string/bill_number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/customer_name"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_aadharcard_number"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/customer_aadharcard_number"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/customer_phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/customer_phone_number"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_address"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/customer_address"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/brand"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/model_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/model_number"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imei_number"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/imei_number"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imei_number_2"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/imei_number_2"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/quantity"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/price"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/due"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/due"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/discount"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warranty_date"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/warranty_date"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/date"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/payment_method"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/form_button_bg" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:backgroundTint="@color/black"
                app:cardCornerRadius="@dimen/_50sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/homepage_button_bg"
                        android:gravity="left"
                        android:paddingStart="@dimen/_60sdp"
                        android:paddingTop="@dimen/_12sdp"
                        android:text="@string/mobile"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_25ssp"
                        android:textStyle="bold"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="1dp" />

                    <ImageView
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:src="@drawable/right"
                        android:layout_marginEnd="@dimen/_60sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>



            </androidx.cardview.widget.CardView>
        </LinearLayout>




    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>