<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout"
    tools:context=".Activity.NavigationDrawerActivity">

    <include
        android:id="@+id/home_page"
        layout="@layout/home_page_layout"/>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/black">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            app:cardCornerRadius="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_90sdp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/hlogo"/>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle2"
            android:layout_marginTop="@dimen/_150sdp">

            <TextView
                android:id="@+id/myAccount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:background="@drawable/homepage_button_bg"
                android:drawableStart="@drawable/maleuser"
                android:gravity="center"
                android:elevation="@dimen/_20sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/my_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/customerDetails"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:elevation="@dimen/_20sdp"
                android:background="@drawable/homepage_button_bg"
                android:drawableStart="@drawable/cd"
                android:gravity="center"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/customer_details"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myAccount" />


            <TextView
                android:id="@+id/salesData"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="20dp"
                android:background="@drawable/homepage_button_bg"
                android:drawableStart="@drawable/salesicon"
                android:elevation="@dimen/_20sdp"
                android:gravity="center"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/sales_data"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customerDetails" />

            <TextView
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/logout_button_bg"
                android:drawableEnd="@drawable/logouticon"
                android:elevation="@dimen/_20sdp"
                android:gravity="center"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_30sdp"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>